Ultimos cambios para agregar un nuevo proyecto compartido para poder hacer la navegacion.

--- a/Evangelizacion/Evangelizacion/Evangelizacion.csproj
+++ b/Evangelizacion/Evangelizacion/Evangelizacion.csproj
@@ -11,7 +11,19 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.ComponentModel.Annotations" Version="5.0.0" />
     <PackageReference Include="Xamarin.Forms" Version="5.0.0.2196" />
     <PackageReference Include="Xamarin.Essentials" Version="1.7.0" />
   </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Views\HomePage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+    <EmbeddedResource Update="Views\LectioDivinaPage.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
+  </ItemGroup>
+
+  <Import Project="..\..\..\..\..\Evangelizacion\Evangelizacion\Core.MVVM\Core.MVVM.projitems" Label="Shared" />
 </Project>
