--- a/Evangelizacion/Evangelizacion/Evangelizacion.csproj
+++ b/Evangelizacion/Evangelizacion/Evangelizacion.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -25,5 +25,5 @@
     </EmbeddedResource>
   </ItemGroup>
 
-  <Import Project="..\..\..\..\..\Evangelizacion\Evangelizacion\Core.MVVM\Core.MVVM.projitems" Label="Shared" />
+  <Import Project="..\..\Core.Evangelizacion\Core.Evangelizacion.projitems" Label="Shared" />
 </Project>
