--- a/Evangelizacion/Evangelizacion/Evangelizacion.csproj
+++ b/Evangelizacion/Evangelizacion/Evangelizacion.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -26,4 +26,6 @@
   </ItemGroup>
 
   <Import Project="..\..\Core.Evangelizacion\Core.Evangelizacion.projitems" Label="Shared" />
+
+  <Import Project="..\..\Core.MVVVM\Core.MVVVM.projitems" Label="Shared" />
 </Project>
